# class-group-tabulation

./: .clang-format  .gitignore  README.md  flake.nix  meson.build  meson.options  treefmt.nix
libs/clgrp/: clgrp.c  clgrp.h
libs/optarith/: primes.h
libs/optarith/code_gen/: gen_sqrtmodp.cc
libs/qform/: mpz_qform.c  s128_qform.c  s64_qform.c
results/: main.typ
results/data/: ell11.csv  ell13.csv  ell17.csv  ell19.csv  ell23.csv  ell29.csv  ell3.csv  ell31.csv  ell5.csv  ell7.csv
scripts/: ell11.sh  ell13.sh  ell17.sh  ell19.sh  ell23.sh  ell29.sh  ell3.sh  ell31.sh  ell5.sh  ell7.sh
src/: clgrp_ell.c  clgrp_ell.h  clgrp_ell_main.c  common.h  ell_count_main.c
